# devicemanager

./: CMakeLists.txt  Readme.md  db.cpp  db.hpp  dockerfile  helper.cpp  main.cpp  protocol_parser.cpp  protocol_parser.hpp  server.cpp  server.hpp  session.cpp  session.hpp
